Creacios de home, filtros y buscador

--- a/src/components/Header/CartWidget/CartWidget.css
+++ b/src/components/Header/CartWidget/CartWidget.css
@@ -1,7 +1,9 @@
 .nav-right {
   color: #022b3a;
   padding-left: 15px;
+  padding-right: 15px;
   position: relative;
+  list-style-type: none;
 }
 
 .nav-right > ul > li {
