--- a/src/components/SectionHome/ItemListContainer/ItemListContainer.css
+++ b/src/components/SectionHome/ItemListContainer/ItemListContainer.css
@@ -1,14 +1,48 @@
+.main-content {
+  flex: 1; /* Ocupa el espacio restante */
+  padding-left: 20px;
+}
+
+.sidebar {
+  width: 150px; /* Ancho del aside */
+  background-color: #f4f4f4; /* Color de fondo */
+  padding: 10px; /* Espaciado interno */
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1); /* Sombra para el efecto de profundidad */
+}
+
+@media only screen and (max-width: 600px) {
+  .sidebar {
+    display: none;
+  }
+
+  .main-content {
+    padding-left: 0;
+  }
+}
+
+
 .title {
-    margin-bottom: 30px;
-    text-align: center;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 .bottom-line:after {
-    content: "";
-    display: block;
-    width: 100px;
-    border-bottom: 2px solid #000;
-    margin: 15px auto 0;
-    z-index: 1;
-    position: relative;
-  }
+  content: "";
+  display: block;
+  width: 100px;
+  border-bottom: 2px solid #000;
+  margin: 15px auto 0;
+  z-index: 1;
+  position: relative;
+}
+
+ul.filter {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+ul.filter li > a {
+  font-size: 1.1rem;
+  line-height: .7rem;
+}
