--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ section {
 }
 
 .section-wrap {
-  padding: 140px 0;
+  padding: 140px 0 70px 0;
   overflow: hidden;
   background-size: cover;
   background-position: center;
