--- a/src/components/Header/Brand/Brand.css
+++ b/src/components/Header/Brand/Brand.css
@@ -1,10 +1,19 @@
 .logo {
   height: 80px;
-  padding-left: 20px;
   display: flex;
   align-items: center;
 }
   
 .logo img {
   max-height: 40px;
+}
+
+@media only screen and (max-width: 600px) {
+  .logo {
+    height: 60px;
+  }
+
+  .logo img {
+    max-height: 25px;
+  }
 }
