--- a/src/components/Header/ButtonMenu/ButtonMenu.css
+++ b/src/components/Header/ButtonMenu/ButtonMenu.css
@@ -10,3 +10,22 @@ a:hover {
   color: #1f7a8c !important;
   text-decoration: none; 
 }
+
+.nav-link {
+  font-size: 1.5rem !important;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu {
+  border: transparent !important;
+  padding: 10px 0 !important;
+  box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.3);
+}
+
+.dropdown-item {
+  font-size: 1rem;
+  line-height: .9rem;
+}
