--- a/src/components/Header/NavBar/NavBar.css
+++ b/src/components/Header/NavBar/NavBar.css
@@ -11,3 +11,26 @@ ul {
   margin: 0 !important;
   padding: 0;
 }
+
+.navbar {
+  width: 100%;
+}
+
+.navbar-collapse {
+  flex-grow: 0 !important;
+}
+
+.navbar-nav {
+  padding-right: 35px !important;
+}
+
+@media only screen and (min-width: 992px) {
+  .nav-wrap {
+    display: block !important;
+    height: auto !important;
+  }
+}
+
+.nav-align-right {
+  margin-left: auto;
+}
